# back/app/Http/Controllers/CountriesController.php
@@ -18,6 +18,39 @@ class CountriesController extends Controller
         $this->repository = $repository;
     }
 
+
+
+            /**
+ * @OA\Get(
+ *     path="/api/countries/{row}",
+ *     description="Return all Countries informations",
+ *     name="Hobby",
+ * 
+ *      tags={"Countries"},
+ *      operationId="ApiV1getCountries",
+ *      summary="Get Countries",
+ *
+ *     @OA\Parameter(
+ *          name="row",
+ *          in="path",
+ *          required=true, 
+ *          type="string" 
+ *      ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="OK",
+ *     ),
+ *     @OA\Response(
+ *         response=400,
+ *         description="Couldn't get any Country"
+ *     ),
+ *   @OA\Tag(
+     *     name="Projects",
+     *     description="API Endpoints of Projects"
+     * )
+ * )
+ */
+
     /**
      * Display a listing of the resource.
      *
@@ -33,6 +66,67 @@ class CountriesController extends Controller
         return Response::error(400, "couldn't get Countries");
     }
 
+
+
+
+
+
+            /**
+ * @OA\Post(
+ *     path="/api/state",
+ *     description="Add new state and return it",
+ *     name="Hobby",
+ * 
+ *      tags={"States"},
+ *      operationId="ApiV1addState",
+ *      summary="Add State",
+ 
+
+ *   @OA\Parameter(
+     *      name="name",
+     *      in="query",
+     *      required=true,
+     *      @OA\Schema(
+     *           type="string"
+     *      )
+     *   ),
+     *   @OA\Parameter(
+     *      name="country_id",
+     *      in="query",
+     *      required=true,
+     *      @OA\Schema(
+     *          type="number"
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=200,
+     *       description="Success",
+     *      @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=401,
+     *       description="Unauthenticated"
+     *   ),
+     *   @OA\Response(
+     *      response=400,
+     *      description="Bad Request"
+     *   ),
+     *   @OA\Response(
+     *      response=404,
+     *      description="not found"
+     *   ),
+     *   @OA\Response(
+     *      response=500,
+     *      description="Duplicate Entry!"
+     *   ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+ * )
+ */
 
     /**
      * Store a newly created resource in storage.
