# back/routes/api.php
@@ -219,3 +219,11 @@ Route::post('/contactus', 'ContactUs@sendEmail');
 
 /////States
 Route::get('/states/{row}', 'StatesController@index');
+
+
+
+
+///For Swagger 
+Route::post('/state', 'StatesController@store');
+Route::get('/state/{id}', 'StatesController@show');
+Route::put('/state/{id}', 'StatesController@update');
